--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <title>Frontend Mentor | Conference ticket generator</title>
 </head>
 <body>
-  <div id="svg1"><img src="./assets/images/pattern-squiggly-line-top.svg" alt="sguilly-lines"></div>
-  <div id="svg2"><img src="./assets/images/pattern-circle.svg" alt="circle"></div>
-  <div id="svg3"><img src="./assets/images/pattern-squiggly-line-bottom-desktop.svg" alt="sguilly-lines"></div>
+  <div id="svg1"><img id="img1" src="./assets/images/pattern-squiggly-line-top.svg" alt="sguilly-lines"></div>
+  <div id="svg2"><img id="img2" src="./assets/images/pattern-circle.svg" alt="circle"></div>
+  <div id="svg3"><img id="img3" src="./assets/images/pattern-squiggly-line-bottom-desktop.svg" alt="sguilly-lines"></div>
   <div id="svg4"><!-- <img src="./assets/images/pattern-lines.svg" alt=""> --></div>
   <main id="main">
     <div id="main-div">
